FIX ALL WHITE SPACE

--- a/style.css
+++ b/style.css
@@ -1808,12 +1808,11 @@ button:hover {
   font-size: 1.5em;
   justify-content: flex-start;
  }
- .sub-event{
- }
+
  
 
 }
-@media (max-width:440px){
+@media (max-width:320px){
   .promote{
     transform: translateX(-50px);
   }
